--- a/06_Paper/ER-ED/ERED_Stage2/Supplement.Rmd
+++ b/06_Paper/ER-ED/ERED_Stage2/Supplement.Rmd
@@ -133,6 +133,9 @@ papaja::apa_table(
 ``` {r SupplFigLevReg, echo=FALSE, message=FALSE, warning=FALSE, fig.cap="Levator activity in mV vizalized as boxplots. Dots represent individual Levator activity measures placed in 150 qantiles.", fig.pos="H"}
 knitr::include_graphics(here("06_Paper", "ER-ED", "ERED_Stage2", "figures", "FigLevReg.png"))
 ```
+\newpage
+
+## Reasons for decision made by the participants in the last regulation block
 
 \newpage
 
