--- a/06_Paper/ER-ED/ERED_Stage2/ER_ED.bib
+++ b/06_Paper/ER-ED/ERED_Stage2/ER_ED.bib
@@ -41,6 +41,18 @@ https://link.springer.com/content/pdf/10.1007%2Fs10608-014-9662-4.pdf},
    year = {2015},
 }
 
+@article{Barreiros2019,
+   author = {Barreiros, A. R. and Almeida, I. and Baia, B. C. and Castelo-Branco, M.},
+   title = {Amygdala Modulation During Emotion Regulation Training With fMRI-Based Neurofeedback},
+   journal = {Frontiers in Human Neuroscience},
+   volume = {13},
+   pages = {89},
+   ISSN = {1662-5161},
+   DOI = {10.3389/fnhum.2019.00089},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/30971906},
+   year = {2019}
+}
+
 @article{Bernecker2017,
    author = {Bernecker, K. and Job, V.},
    title = {Implicit Theories About Willpower in Resisting Temptations and Emotion Control},
