--- a/06_Paper/ER-ED/ERED_Stage2/ER_ED.bib
+++ b/06_Paper/ER-ED/ERED_Stage2/ER_ED.bib
@@ -75,6 +75,21 @@ https://link.springer.com/content/pdf/10.1007%2Fs10608-014-9662-4.pdf},
    year = {2004},
 }
 
+@article{Bialaszek2017,
+   author = {Bialaszek, W. and Marcowski, P. and Ostaszewski, P.},
+   title = {Physical and cognitive effort discounting across different reward magnitudes: Tests of discounting models},
+   journal = {Plos One},
+   volume = {12},
+   number = {7},
+   ISSN = {1932-6203},
+   DOI = {ARTN e0182353
+10.1371/journal.pone.0182353},
+   url = {<Go to ISI>://WOS:000406761600073
+https://journals.plos.org/plosone/article/file?id=10.1371/journal.pone.0182353&type=printable},
+   year = {2017},
+   type = {Journal Article}
+}
+
 @article{Blanke2020,
    author = {Blanke, E. S. and Brose, A. and Kalokerinos, E. K. and Erbas, Y. and Riediger, M. and Kuppens, P.},
    title = {Mix it to fix it: Emotion regulation variability in daily life},
