--- a/06_Paper/ER-ED/ERED_Stage2/ER_ED.bib
+++ b/06_Paper/ER-ED/ERED_Stage2/ER_ED.bib
@@ -153,6 +153,19 @@ https://journals.plos.org/plosone/article/file?id=10.1371/journal.pone.0182353&t
    year = {2000}
 }
 
+@article{Burr2020,
+   author = {Burr, D. A. and Samanez-Larkin, G. R.},
+   title = {Advances in Emotion Regulation Choice from Experience Sampling},
+   journal = {Trends in Cognitive Sciences},
+   volume = {24},
+   number = {5},
+   pages = {344-346},
+   ISSN = {1364-6613},
+   DOI = {10.1016/j.tics.2020.02.008},
+   url = {<Go to ISI>://WOS:000526992500002},
+   year = {2020}
+}
+
 @article{Burr2021,
    author = {Burr, D. A. and Pizzie, R. G. and Kraemer, D. J. M.},
    title = {Anxiety, not regulation tendency, predicts how individuals regulate in the laboratory: An exploratory comparison of self-report and psychophysiology},
@@ -253,6 +266,19 @@ https://onlinelibrary.wiley.com/doi/pdfdirect/10.1002/da.10113?download=true},
    title = {A new self-report instrument for measuring emotion regulation flexibility.},
    journal = {Society for Affective Science (SAS) Annual Conference},
    year = {2019},
+}
+
+@article{Elkjaer2022,
+   author = {Elkjaer, E. and Mikkelsen, M. B. and O'Toole, M. S.},
+   title = {Emotion regulation patterns: Capturing variability and flexibility in emotion regulation in an experience sampling study},
+   journal = {Scandinavian Journal of Psychology},
+   volume = {63},
+   number = {4},
+   pages = {297-307},
+   ISSN = {0036-5564},
+   DOI = {10.1111/sjop.12808},
+   url = {<Go to ISI>://WOS:000771080100001},
+   year = {2022}<
 }
 
 @Article{Enders2007,
