--- a/06_Paper/ER-ED/ERED_Stage2/ER_ED.bib
+++ b/06_Paper/ER-ED/ERED_Stage2/ER_ED.bib
@@ -278,7 +278,7 @@ https://onlinelibrary.wiley.com/doi/pdfdirect/10.1002/da.10113?download=true},
    ISSN = {0036-5564},
    DOI = {10.1111/sjop.12808},
    url = {<Go to ISI>://WOS:000771080100001},
-   year = {2022}<
+   year = {2022}
 }
 
 @Article{Enders2007,
