--- a/06_Paper/ER-ED/ERED_Stage2/ER_ED.bib
+++ b/06_Paper/ER-ED/ERED_Stage2/ER_ED.bib
@@ -964,6 +964,18 @@ https://onlinelibrary.wiley.com/doi/pdfdirect/10.1111/j.0022-3506.2004.00263.x?d
   urldate    = {2021-06-29},
 }
 
+@article{Wilms2020,
+   author = {Wilms, R. and Lanwehr, R. and Kastenmuller, A.},
+   title = {Emotion Regulation in Everyday Life: The Role of Goals and Situational Factors},
+   journal = {Frontiers in Psychology},
+   volume = {11},
+   ISSN = {1664-1078},
+   DOI = {ARTN 877
+10.3389/fpsyg.2020.00877},
+   url = {<Go to ISI>://WOS:000538894400001},
+   year = {2020}
+}
+
 @article{Yoon2013,
    author = {Yoon, K. L. and Maltby, J. and Joormann, J.},
    title = {A pathway from neuroticism to depression: examining the role of emotion regulation},
@@ -977,6 +989,20 @@ https://onlinelibrary.wiley.com/doi/pdfdirect/10.1111/j.0022-3506.2004.00263.x?d
    url = {https://www.ncbi.nlm.nih.gov/pubmed/23078141
 http://www.tandfonline.com/doi/pdf/10.1080/10615806.2012.734810?needAccess=true},
    year = {2013},
+}
+
+@article{Yougn2020,
+   author = {Young, G. and Suri, G.},
+   title = {Emotion regulation choice: a broad examination of external factors},
+   journal = {Cognition & Emotion},
+   volume = {34},
+   number = {2},
+   pages = {242-261},
+   ISSN = {0269-9931},
+   DOI = {10.1080/02699931.2019.1611544},
+   url = {<Go to ISI>://WOS:000470525800001},
+   year = {2020},
+   type = {Journal Article}
 }
 
 @Book{Yu2010,
