--- a/06_Paper/ER-ED/ERED_Stage2/Discussion.Rmd
+++ b/06_Paper/ER-ED/ERED_Stage2/Discussion.Rmd
@@ -44,9 +44,20 @@ Subjective effort, utility, and *Corrugator* muscle activity significantly predi
 Contrary to our hypothesis H6, utility was the best predictor for individual SVs, explaining `r papaja::printnum(H5_M2_table[4,5]*100, digits = 1)` percent of variance in SVs.
 However, individual SVs did not show associations with ER flexibility, we therefore found no evidence for hypothesis H7.
 
-## Validity of subjective values of ER strategies
+## Ecological validity of subjective values of ER strategies
+
+Our goal was to calculate individual subjective values to develop a better understanding of ER stratagem selection.
+Most individuals show great variability in the choice of strategies, both, within-strategy and between-strategy[@Blanke2020;@Burr2020;@Elkjaer2022]. 
+Greater variability might even adaptive [@Blanke2020;@Aldao2015].
+In addition, a wide variety of factors that influence the choice of stratgies in specific situations were examined[@Scheffel2021;@Sheppes2011;@Sheppes2014;@Wilms2020;@Young2020].
+Thus, different factors have only rarely been studied together[@Young2020].
+Moreover, the usual paradigms used in ER choice research (e.g., Sheppes et al.[@Sheppes2011]) cannot be used to determine what internal subjective value the subjects associated with the strategies.
+However, we succeeded in this with our new CAD paradigm.
+On the one hand, we were able to show which factors influence the values, but on the other hand, we were able to show the actual practical relevance of the values.
 
 
+## Trait character of SVs
+Hat das Trait-Charakter?
 
 
 ## Limitations
