--- a/06_Paper/ER-ED/ERED_Stage2/ER_ED.bib
+++ b/06_Paper/ER-ED/ERED_Stage2/ER_ED.bib
@@ -294,6 +294,21 @@ https://onlinelibrary.wiley.com/doi/pdfdirect/10.1002/da.10113?download=true},
   publisher = {American Psychological Association ({APA})},
 }
 
+@article{English2017,
+   author = {English, T. and Lee, I. A. and John, O. P. and Gross, J. J.},
+   title = {Emotion regulation strategy selection in daily life: The role of social context and goals},
+   journal = {Motivation and Emotion},
+   volume = {41},
+   number = {2},
+   pages = {230-242},
+   ISSN = {0146-7239},
+   DOI = {10.1007/s11031-016-9597-z},
+   url = {<Go to ISI>://WOS:000397476200007
+https://link.springer.com/content/pdf/10.1007/s11031-016-9597-z.pdf},
+   year = {2017},
+   type = {Journal Article}
+}
+
 @Article{Faul2009,
   author     = {Faul, F. and Erdfelder, E. and Buchner, A. and Lang, A.-G.},
   journal    = {Behavior Research Methods},
@@ -606,6 +621,19 @@ https://www.nature.com/articles/nn2007.pdf},
    year = {2014}
 }
 
+@article{Koval2020,
+   author = {Koval, P. and Kalokerinos, E. K. and Verduyn, P. and Greiff, S.},
+   title = {Introduction to the Special Issue Capturing the Dynamics of Emotion and Emotion Regulation in Daily Life With Ambulatory Assessment},
+   journal = {European Journal of Psychological Assessment},
+   volume = {36},
+   number = {3},
+   pages = {433-436},
+   ISSN = {1015-5759},
+   DOI = {10.1027/1015-5759/a000599},
+   url = {<Go to ISI>://WOS:000545308000001},
+   year = {2020}
+}
+
 
 @Article{Kuznetsova2017,
    title = {{lmerTest} Package: Tests in Linear Mixed Effects Models},
@@ -637,6 +665,19 @@ https://www.nature.com/articles/nn2007.pdf},
    DOI = {10.1177/2041386611417746},
    url = {<Go to ISI>://WOS:000209382500002},
    year = {2012}
+}
+
+@article{Millgram2019,
+   author = {Millgram, Y. and Sheppes, G. and Kalokerinos, E. K. and Kuppens, P. and Tamir, M.},
+   title = {Do the Ends Dictate the Means in Emotion Regulation?},
+   journal = {Journal of Experimental Psychology-General},
+   volume = {148},
+   number = {1},
+   pages = {80-96},
+   ISSN = {0096-3445},
+   DOI = {10.1037/xge0000477},
+   url = {<Go to ISI>://WOS:000454520300006},
+   year = {2019}}
 }
 
 @Manual{Morey2021,
@@ -723,6 +764,19 @@ https://www.tandfonline.com/doi/full/10.1080/00223891.2018.1564319},
   shorttitle = {{PsychoPy2}},
   url        = {https://doi.org/10.3758/s13428-018-01193-y},
   urldate    = {2021-11-19},
+}
+
+@article{Pena-Sarrionandia2015,
+   author = {Pena-Sarrionandia, A. and Mikolajczak, M. and Gross, J. J.},
+   title = {Integrating emotion regulation and emotional intelligence traditions: a meta-analysis},
+   journal = {Frontiers in Psychology},
+   volume = {6},
+   ISSN = {1664-1078},
+   DOI = {ARTN 160
+10.3389/fpsyg.2015.00160},
+   url = {<Go to ISI>://WOS:000349838100001},
+   year = {2015},
+   type = {Journal Article}
 }
 
 @article{Powers2019,
