--- a/06_Paper/ER-ED/ERED_Stage2/Discussion.Rmd
+++ b/06_Paper/ER-ED/ERED_Stage2/Discussion.Rmd
@@ -54,11 +54,29 @@ Thus, different factors have only rarely been studied together[@Young2020].
 Moreover, the usual paradigms used in ER choice research (e.g., Sheppes et al.[@Sheppes2011]) cannot be used to determine what internal subjective value the subjects associated with the strategies.
 However, we succeeded in this with our new CAD paradigm.
 On the one hand, we were able to show which factors influence the values, but on the other hand, we were able to show the actual practical relevance of the values.
+The highest SVs of the individuals were associated with the choice made by the participants. 
+Until now, it has been difficult to transfer such findings from the laboratory to everyday life[@Wilms2020].
+This could be due to the fact that the strategies that have to be chosen between are often fixed in laboratory tests by the experimental design[@Sheppes2011;@Sheppes2014;@Scheffel2021].
+It was therefore attempted to investigate ER choice and influencing factors in everyday life.
+However, even there, certain strategies were often prescribed (for example studies, see English et al.[@Englisch2017], Millgram et al.[@Millgram2019], Wilms et al.[@Wilms2020]). 
+Although these covered a large area of the emotion-genesis process[@Gross1998emerging], they were nevertheless ultimately fixed.
+Of course, the calculation of SVs in our new CAD paradigm is tied to the strategies with which the strategy of interest is compared.
+However, it would be possible to use ecological momentary assessment to capture ER strategies[@Koval2020].
+This would allow all strategies of the ER repertoire to be recorded for each individual[@Aldao2015]. 
+Also those that are rarely used or even marked as maladaptive, such as alcohol consumption or rumination[@Pena-Sarrionandia2015].
+
+
+
+
+Dynamic processes in emotion regulation choice
+Jonathan W. Murphy
+& Michael A. Young
 
 
 ## Trait character of SVs
 Hat das Trait-Charakter?
 
+State character of goals @Wilms2020
 
 ## Limitations
 
